Fixed css overflows

--- a/client/src/configs/reset.css
+++ b/client/src/configs/reset.css
@@ -13,6 +13,8 @@ body {
   padding: 0;
   overflow: auto;
   font-size: 1vw;
+  overflow-x: hidden;
+  overflow-y: overlay;
 }
 
 #root {
